# CainCamera

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: fragment_beauty.glsl  fragment_blackcat.glsl  fragment_clear.glsl  fragment_cool.glsl  fragment_evergreen.glsl  fragment_fairytale.glsl  fragment_sakura.glsl  fragment_sticker.glsl  fragment_sunset.glsl  fragment_whitecat.glsl  fragment_whiten.glsl  vertex_mls.glsl  vertex_sticker.glsl
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/encoder/: aac_encoder.cpp  aac_encoder.h  cain_encoder_jni.cpp  cain_recorder.cpp  cain_recorder.h  common_encoder.h  encoder.cpp  encoder.h  encoder_params.h  ffmpeg_encoder.cpp  ffmpeg_encoder.h  h264_encoder.cpp  h264_encoder.h  media_muxer.cpp  media_muxer.h  native_log.h  safety_queue.cpp
app/src/main/cpp/ffmpeg/: cmdutils.c  ffmpeg.c
app/src/main/cpp/ffmpeg_cmd/: ffmpeg_cmd_wrapper.h
app/src/main/res/color/: dialog_pro_color.xml
app/src/main/res/drawable/: bg_record_next_button.xml  bottom_background.xml  bottom_background_glow.xml  graffiti_blue.xml  graffiti_red.xml  graffiti_white.xml  graffiti_yellow.xml  round_red.xml  seekbar_thumb_pressed.xml
app/src/main/res/layout/: activity_camera.xml  activity_camera_test.xml  activity_capture_preview.xml  activity_duet_record.xml  activity_face_track2.xml  activity_ffmedia_record.xml  activity_login.xml  activity_main.xml  activity_music_merge.xml  activity_music_player.xml  activity_music_scan.xml  activity_photo_view.xml  activity_speed_record.xml  activity_test.xml  activity_video_edit.xml  activity_video_gif_make.xml  activity_video_play.xml  activity_video_record.xml  fragment_ffmedia_record.xml  fragment_music_merge.xml  fragment_music_player.xml  fragment_music_scan.xml  fragment_video_gif_make.xml  fragment_video_player.xml  item_music_scan_view.xml  item_photo_view.xml  setting_more_display.xml  view_pop_setting.xml  view_preview_bottom.xml  view_preview_top.xml  view_preview_value.xml
app/src/main/res/values/: colors.xml  dimen.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
ffmpeglibrary/: .gitignore  CMakeLists.txt  build.gradle
ffmpeglibrary/src/main/: AndroidManifest.xml
ffmpeglibrary/src/main/cpp/: CMakeLists.txt
ffmpeglibrary/src/main/cpp/MediaRecorder/: CMakeLists.txt  RecorderController.cpp
ffmpeglibrary/src/main/cpp/Metadata/: CMakeLists.txt
ffmpeglibrary/src/main/cpp/MusicPlayer/: CMakeLists.txt  JniPlayerCallback.h
ffmpeglibrary/src/main/cpp/SoundTouch/: CMakeLists.txt  SoundTouchWrapper.h
ffmpeglibrary/src/main/cpp/cainfilter/: GLImageFilter.cpp  GLImageFilter.h  GLImageInputFilter.cpp  GLImageInputFilter.h
ffmpeglibrary/src/main/cpp/caingles/: EglCore.cpp  EglCore.h  EglSurfaceBase.cpp  EglSurfaceBase.h  GlShaders.cpp  GlShaders.h  GlUtils.cpp  GlUtils.h  OffscreenSurface.h  WindowSurface.cpp  WindowSurface.h
ffmpeglibrary/src/main/cpp/cainplayer/: PlayerController.cpp
ffmpeglibrary/src/main/cpp/cainrecorder/: RecorderController.cpp
ffmpeglibrary/src/main/cpp/common/: AndroidLog.h  Handler.cpp  Handler.h  Looper.cpp  Looper.h  MessageQueue.cpp  MessageQueue.h  Thread.cpp  Thread.h  Timer.h  native_log.h
ffmpeglibrary/src/main/cpp/encoder/: cain_encoder_jni.cpp  encoder_params.h
ffmpeglibrary/src/main/cpp/ffmpeg/: cmdutils.h  config.h  ffmpeg.c  ffmpeg.h
ffmpeglibrary/src/main/cpp/ffmpeg_cmd/: ffmpeg_cmd.h  ffmpeg_cmd_wrapper.c  ffmpeg_cmd_wrapper.h
ffmpeglibrary/src/main/cpp/ffmpeg_command/: ffmpeg_cmd.c  ffmpeg_cmd_wrapper.c  ffmpeg_cmd_wrapper.h
ffmpeglibrary/src/main/cpp/include/: AndroidLog.h
ffmpeglibrary/src/main/cpp/metadata/: MetadataController.cpp
ffmpeglibrary/src/main/cpp/musicplayer/: JniPlayerCallback.cpp  PlayerController.cpp
ffmpeglibrary/src/main/cpp/recorder/: CMakeLists.txt  RecorderController.cpp
ffmpeglibrary/src/main/res/layout/: activity_main.xml  activity_media_player.xml  activity_music_player.xml  activity_video_record.xml
ffmpeglibrary/src/main/res/values/: strings.xml
filterlibrary/: .gitignore  CMakeLists.txt  build.gradle
filterlibrary/libs/: MGLicenseManagerSDK-0.3.0.aar
filterlibrary/src/main/: AndroidManifest.xml
filterlibrary/src/main/assets/shaders/: fragment_amaro.glsl  fragment_antique.glsl  fragment_beauty_adjust.glsl  fragment_blackwhite.glsl  fragment_brooklyn.glsl  fragment_calm.glsl  fragment_earlybird.glsl  fragment_effect_scale.glsl  fragment_emerald.glsl  fragment_enlarge_eye.glsl  fragment_frame_blur.glsl  fragment_freud.glsl  fragment_gaussian_blur.glsl  fragment_healthy.glsl  fragment_hefe.glsl  fragment_high_pass.glsl  fragment_hudson.glsl  fragment_kevin.glsl  fragment_latte.glsl  fragment_lomo.glsl  fragment_mosaic.glsl  fragment_mosaic_circle.glsl  fragment_mosaic_hexagon.glsl  fragment_mosaic_triangle.glsl  fragment_nostalgia.glsl  fragment_realtime_beauty.glsl  fragment_rgb_shift.glsl  fragment_romance.glsl  vertex_beauty_blur.glsl  vertex_gaussian_blur.glsl  vertex_mls.glsl
filterlibrary/src/main/cpp/: CMakeLists.txt  ImageFilterController.cpp
filterlibrary/src/main/cpp/cainmedia/: ImageProcess.cpp  ImageProcess.h  ImageProcessJni.cpp  ImageProcessJni.h
filterlibrary/src/main/cpp/common/: AndroidLog.h  Point.cpp  Point.h
filterlibrary/src/main/cpp/imagefilter/: BlackWhiteFilter.cpp  BlackWhiteFilter.h  IImageFilter.h
filterlibrary/src/main/cpp/nativefilter/: BlackWhiteFilter.cpp  BlackWhiteFilter.h  BlendFilter.cpp  BlendFilter.h  BrightContrastFilter.cpp  BrightContrastFilter.h  ColorQuantizeFilter.cpp  ColorQuantizeFilter.h  FilterUtils.cpp  FilterUtils.h  GaussianBlurFilter.cpp  GaussianBlurFilter.h  HistogramEqualFilter.cpp  HistogramEqualFilter.h  ImageFilter.cpp  ndkfilter.h  (+13 more)
gdxlibrary/: CMakeLists.txt  build.gradle
gdxlibrary/src/main/: AndroidManifest.xml
gdxlibrary/src/main/cpp/: Matrix4.cpp  Matrix4.h
medialibrary/src/main/cpp/: CMakeLists.txt
pushlibrary/: CMakeLists.txt  build.gradle
pushlibrary/src/main/: AndroidManifest.xml
(+2773 files in other folders)
